tests/anp_test_ingress_egress_intersection/anp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: cluster-allow-example
spec:
  priority: 30
  subject:
    namespaces: {}
  ingress:
    - action: Allow
      from:
      - namespaces: {}
      ports:
        - portNumber:
            protocol: UDP
            port: 5353
        - portNumber:
            protocol: TCP
            port: 2000
    - action: Deny # deny others
      from:
      - namespaces: {}
  egress:
    - action: Allow
      to:
      - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: foo-ns-2
      ports:
      - portRange:
          protocol: UDP # only UDP 5353 will be allowed as the others in the range are denied by ingress
          start: 5000
          end: 6000
      - portNumber:  # will not be allowed (denied by ingress)
          protocol: TCP
          port: 8080
    - action: Deny # deny others
      to:
      - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: foo-ns-2
