tests/anp_test_ingress_egress_intersection/kube_system_pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-dns
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-dns
  template:
    metadata:
      labels:
        app: kube-dns
    spec:
      containers:
      - name: kube-dns
        image: netpol/example2
        args:
        - -name
        - kube-dns
        - -port
        - "5698"
        ports:
        - name: http
          containerPort: 5698
          protocol: TCP
---
